# coding-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_INSTRUCTIONS.md  AUTONOMY_BLOCKERS.md  CHANGES.md  CODEX_REVIEW.md  COMPREHENSIVE_CODE_REVIEW.md  FINAL_CODE_REVIEW.md  GEMINI.md  Makefile  PERFORMANCE_GUIDE.md  PERFORMANCE_TUNING.md  README.md  SENIOR_AGENT_ROADMAP.md  SPEED_IMPROVEMENTS.md  V3_GAP_ANALYSIS.md  WORKFLOW.md  benchmark_agent.py  codex_final_review.md  faster_review.md  gemini_code_review.md  instruction.md  kill.sh  main.py  pyproject.toml  requirements-dev.txt  review.md  senior_instruction.md  senior_review.md  server_v2.py  sql_app.db  stack.py  start.sh  v2-plan.md
briefs/: website-design-development-brief.txt
docs/: ARCHITECTURE.md  CODE_REVIEW_2026_02_26.md  DEVELOPMENT_LOG.md  EFFICIENCY_EXECUTION_PLAN.md  LLM_DOCS.md  QUALITY_GATES.md  implemented.md  openclaw_review.md
scripts/: quality_gate.py
static_v2/: app.js  index.html  style.css
tests/: benchmark_classifier.py  smoke_test_planner.py  test_baseline.py  test_checkpoint.py  test_classifier.py  test_codex_cli.py  test_compatibility.py  test_conftest_injection.py  test_dep_tools.py  test_dependency_manager.py  test_deterministic_import_fix.py  test_encoding_guard.py  test_engine.py  test_executor.py  test_framework_guardrails.py  test_healer.py  test_healer_loop_guard.py  test_live_guard.py  test_llm_cache.py  test_llm_client.py  test_main.py  test_metrics.py  test_model_kwarg_guard.py  test_models.py  test_null_test_suite.py  test_orchestrator.py  test_orchestrator_guards.py  (+28 more)
(+175 files in other folders)
